
Not to mention all bugfixes and rewrites.

Coccinella-0.94.9 (04????): 	Short summary --

        - prepared for using xml/svg for all whiteboard stuff
	- major internal code reorganizations to separate whiteboard code
          from rest and be independent of protocols
	- reworked the groupchat dialog from scratch
	- major restructure of all browse code
	- added support for emoticon sets


Coccinella-0.94.8 (040305): 	Short summary --

        - fixed critical bugs in p2p startup
        - fixed bug when auto away
        - added SVG importer


Coccinella-0.94.7 (040228): 	Short summary --

	- separating actual whiteboard code from rest.
	- uses resource database for everything, also images
	- chat dialog rewritten; new buttons, jabber:x:event support
	- using a hooks mechanism to handle callbacks in a more
	  modular way
  	- user profiles rewritten from scratch
	- alert sounds part rewritten; added a few more sound events;
          added possiblity to use sound sets
	- reworked tabbed notebook interface
	- added support for tkdnd (drag and drop) in the whiteboard for
          linux/unix and windows


Coccinella-0.94.6 (03????): 	Short summary --

	- internal http server in its own thread if available
	- better redo/undo functionality
	- fixed stacking inconsistencies when sharing images
	- background image in tree widget (roster)
	- better handling of event sounds
	- new addon structure for extensions
	- fixed cut/copy/paste menus on macs
	- files transported were not always cached, now fixed
	- incoming files will now have there file names encoded to
	  avoid name conflicts
	- added games item with chess as a first example
	- added (primitive) printing support for Mac OS X
	- sorted out how to handle 2/3-tier jids in chats and messages
	- reworked button tray into a mega widget


Coccinella-0.94.5 (0309??): 	Short summary --

	- jid completion entry
	- setup assistant with free servers info dialog